--- a/Form.html
+++ b/Form.html
@@ -6,8 +6,8 @@
     <title>FORM</title>
 </head>
 <body>
-    <h1>About Myself</h1>
-    <h2>Personal Information</h2>
+    <h1>Introductions</h1>
+    <h2>Personal Info</h2>
     <form action="/submit">
         <label for="name">Full Name: </label>
         <input type="text" id="name" name="name" required>
